--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ html, body {
 
 #main {
     max-width: 1200px;
-    min-height: 100%;
+    min-height: 100vh;
     background-color: #f4f3ee;
     margin-bottom: 20px;
 }
@@ -153,10 +153,6 @@ p {
 
 
 @media (max-width: 1050px) {
-
-    #main {
-        height: 230vh;
-    }
 
     #top {
         text-align: center;
